# doapi-rs

./: Cargo.toml  README.md  notes.md
examples/: create.rs
src/: common.rs  lib.rs  request.rs  response.rs  result.rs
src/client/: droplets.rs  mod.rs
