[package]
authors = ["Kevin K. <kbknapp@gmail.com>"]
description = "A wrapper library for the DigitalOcean API v2"
documentation = "http://kbknapp.github.io/doapi-rs"
keywords = ["do", "lib", "digitalocean", "digital", "ocean"]
license = "MIT"
name = "doapi"
readme = "README.md"
repository = "https://github.com/kbknapp/doapi-rs.git"
version = "0.1.1"

[dependencies]
hyper = "0.7.2"
quick-error = "1.0.0"
regex = "0.1"
serde = "0.6.14"
serde_json = "0.6.0"
serde_macros = "0.6.14"

[dependencies.clippy]
optional = true
version = "0.0.22"

[features]
debug = []
default = ["nightly"]
lints = ["nightly", "clippy"]
nightly = []
unstable = ["nightly", "lints"]
